k8s/media-services/radarr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: radarr
  namespace: media-services
  labels:
    app: radarr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: radarr
